FIX in the Generator- separator list Dialog in front of settings Z-index

--- a/IGRP/src/main/webapp/images/IGRP/IGRP2.3/core/formgen/css/style.css
+++ b/IGRP/src/main/webapp/images/IGRP/IGRP2.3/core/formgen/css/style.css
@@ -296,7 +296,7 @@ a, button {
 }
 
 .row.ui-sortable-helper{
-	opacity: .4
+	opacity: .4;
 	height:15px!important;
 	overflow: hidden;
 	max-width: 100%!important;
@@ -887,7 +887,7 @@ thead tr.no-fields .gen-container-sortable-placeholder{
 }
 
 #gen-edition-modal{
-	z-index: 1051;
+	z-index: 1053;
 	padding: 0!important;
 }
 
